[package]
name = "xeneon-core"
version = "0.1.0"
edition = "2021"
description = "Core library for Xeneon Edge Linux Hub"
# The repo ships LICENSE-MIT + LICENSE-APACHE and the README grants both, but the
# manifest declared nothing — so cargo-deny reported our OWN crate as
# "unlicensed" while auditing everyone else's. Declaring it lets the licence
# allowlist stay strict instead of carrying a clarify-rule for ourselves.
license = "MIT OR Apache-2.0"

[lib]
name = "xeneon_core"
crate-type = ["staticlib", "lib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }

[dev-dependencies]
tempfile = "3"
proptest = "1"

